got webpack setup

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="/bundle.js"></script>
   </head>
   <body>
-    <div>afegafafaera</div>
+    <div id="root"></div>
   </body>
 </html>
